--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
                         format_sql: true
     data:
         redis:
-            host: localhost #?? Redis ??? ???
+            host: ${REDIS_HOST}
             port: 6379
 
     cache:
@@ -28,4 +28,3 @@ spring:
 
     jwt:
         secret: ${JWT_SECRET}
-
