🔨 [fix] 회원가입, 보호자/피보호자 조회 API 수정
회원가입 및 보호자 피보호자 조회 API 수정

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+### application files ###
+application-secret.yml
+src/main/resources/application-secret.yml
