--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
+    profiles:
+        active: secret
+
     datasource:
-        url: ${DEV_MYSQL_URL}
-        username: ${DEV_MYSQL_USERNAME}
-        password: ${DEV_MYSQL_PASSWORD}
+        url: ${mysql.url}
+        username: ${mysql.username}
+        password: ${mysql.password}
         driver-class-name: com.mysql.cj.jdbc.Driver
 
     jpa:
@@ -20,11 +23,11 @@ spring:
                         format_sql: true
     data:
         redis:
-            host: ${REDIS_HOST}
-            port: 6379
+            host: ${redis.host}
+            port: ${redis.port}
 
     cache:
         type: redis
 
     jwt:
-        secret: ${JWT_SECRET}
+        secret: ${jwt.secret}
